scripts/nullaway/annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8.txt
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Weight.java:98: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Creature.java:616: error: [NullAway] dereferenced expression anchor.getName() is @Nullable
			if(anchor.getName().equals(name))
			                   ^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Creature.java:618: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/ItemImplementation.java:185: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return parent;
		^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Container.java:261: error: [NullAway] dereferenced expression getHolder() is @Nullable
		return (!hasHolder() || getHolder().canAddItem(item))
		                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Container.java:337: error: [NullAway] dereferenced expression content.get(item.getId()) is @Nullable
		content.get(item.getId()).remove(item);
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ArmorTest.java:24: error: [NullAway] initializer method does not guarantee @NonNull field armor2 (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setUp() throws Exception {
	            ^
    (see http://t.uber.com/nullaway )
../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ItemImplementationTest.java:103: error: [NullAway] dereferenced expression backpack1 is @Nullable
		assertEquals(holder, backpack1.getHolder());
		                              ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Weight.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors
